Persisting Auth state using localStorage, protected user routes, and filtering orders based on user

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "[json]": {
       "editor.formatOnSave": true
     },
+    "prettier.singleQuote": true,
     "prettier.trailingComma": "none",
     "prettier.tabWidth": 4,
     "files.trimTrailingWhitespace": true,
